# galaxydslr

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  camcontrol.py  controlapp.py  devel.sh  dslr.py  flaskapp.py  guiding.py  main.py  pylintrc  pyproject.toml  readme.md  run.sh
static/css/: main.css
static/js/: main.js
templates/haml/: index.haml
templates/html/: index.html
